index page layout bugfixes

--- a/src/sass/presentation.scss
+++ b/src/sass/presentation.scss
@@ -3,6 +3,7 @@
 		display: grid;
 		place-items: center;
 		min-height: calc(100vh - 11rem);
+		min-height: calc(100svh - 11rem);
 		grid-template-columns: repeat(auto-fill, minmax(21.25rem, 1fr));
 		margin: 0 0 calc(var(--spacing-y) * 5);
 	}
@@ -56,9 +57,8 @@
 
 			@media (pointer: fine) and (prefers-reduced-motion: no-preference) {
 				&:hover {
-					fill: var(--pop-color);
-					filter: contrast(0%) sepia(100%) saturate(1200%)
-						brightness(67%) hue-rotate(290deg); // hack to --accent-color
+					fill: var(--accent-color);
+					filter: hue-rotate(-140deg) brightness(1.8); // hack to --pop-color
 					transition: none;
 				}
 			}
